<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b>facebook.com/device&lt;/b> and enter your code.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_tooltip_default">"New! You're in control - choose what info you want to share with apps."</string>
    <string name="common_android_wear_notification_needs_update_text">%1$s requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text">"%1$s won't run unless you update the Android Wear app."</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="messenger_send_button_text">Send</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="tw__composer_hint">"What's Happening?"</string>
    <string name="tw__login_btn_txt">Log in with Twitter</string>
    <string name="tw__max_tweet_chars">140</string>
    <string name="tw__post_tweet">Tweet</string>
    <string name="abort_downloading_warn">Do you want to stop downloading? You can go to Home > Settings > Memory Management to retrieve undownloaded photos and videos.</string>
    <string name="accept">Accept</string>
    <string name="add_owner_before_owner_mode">You need to add an Owner before you use Owner Mode.</string>
    <string name="album">Album</string>
    <string name="album_cancel_when_downloading">Download is not completed. Are you sure to exit?</string>
    <string name="album_delete_title">Delete items?</string>
    <string name="album_dialog_yes">Yes</string>
    <string name="album_dialoge_no">No</string>
    <string name="album_no_image">No Photos</string>
    <string name="album_no_video">No Videos</string>
    <string name="album_top_bar_deselect">Deselect All</string>
    <string name="album_top_bar_select_all">Select All</string>
    <string name="alert_app_update">There is a new version of this App available. Do you want to upgrade?</string>
    <string name="btn_confirm">OK</string>
    <string name="cancel_share">CANCEL</string>
    <string name="check_page_firmware_title">Firmware Update</string>
    <string name="check_page_firmware_update_imv_desc_about">About</string>
    <string name="check_page_firmware_update_imv_desc_memory">Memory Management</string>
    <string name="check_page_firmware_update_imv_title">Hover Camera Settings</string>
    <string name="check_page_firmware_update_tips">Tips：</string>
    <string name="check_page_firmware_update_tips_desc">"If you don’t know how to fly,
 please check it in tutorial"</string>
    <string name="owner_tutorial_page0_wifi_btn">OK</string>
    <string name="owner_tutorial_page0_wifi_settings_name">HoverCamera_XXXXXX</string>
    <string name="owner_tutorial_page0_wifi_settings_pwd">Initial password：12345678</string>
    <string name="owner_tutorial_page0_wifi_settings_title">Wifi</string>
    <string name="owner_tutorial_page3_txt_desc1">Countdown to take photo</string>
    <string name="owner_tutorial_page3_txt_desc2">Deactivate Owner Mode</string>
    <string name="owner_tutorial_page3_txt_hint">For best use, keep distance of 1.5 meters</string>
    <string name="owner_tutorial_page3_txt_title">Gesture Control</string>
    <string name="setting_connection_frequency_band_inside">WiFi Frequency Band</string>
    <string name="setting_connection_frequency_band_make_sure">Please make sure your devices supports 5G HZ WiFi</string>
    <string name="setting_connection_frequency_band_warning">Warning</string>
    <string name="setting_connection_frequency_band_warning_details">Changing the frequency band of your Hover Camera to an unsupported one will disable you to connect to the camera.Your will have to reverse the change by pressing the Factory Reset button on the machine.</string>
    <string name="setting_owner_mode">Owner Mode</string>
    <string name="setting_support_and_feedback_description">Description of the problem</string>
    <string name="setting_support_and_feedback_description_hint">Words limit 0–600 chars</string>
    <string name="setting_support_and_feedback_email">Email</string>
    <string name="setting_support_and_feedback_email_hint">Your email</string>
    <string name="setting_support_and_feedback_name">Name</string>
    <string name="setting_support_and_feedback_name_hint">Your name</string>
    <string name="setting_support_and_feedback_submit">Submit</string>
    <string name="setting_update_firmware_go_hover">"Now let's go hover!"</string>
    <string name="setting_update_firmware_home">Home</string>
    <string name="setting_update_firmware_update_successfully">Your Hover Camera has been successfully updated!</string>
    <string name="share_facebook">Facebook</string>
    <string name="share_instagram">Instagram</string>
    <string name="share_more">More</string>
    <string name="share_twitter">Twitter</string>
    <string name="share_wechat">WeChat</string>
    <string name="share_wechat_timeline">WeChatMoments</string>
    <string name="share_weibo">WeiBo</string>
    <string name="share_youtube">Youtube</string>
    <string name="tutorial_page_1_desc1">Starting up</string>
    <string name="tutorial_page_1_desc2">Wi-Fi</string>
    <string name="tutorial_page_1_title">Connect Hover Camera Passport</string>
    <string name="tutorial_page_1_txt1">Hold the power button for 2s until the green light blinks twice. Once the power light stops flashing, you’ll hear a beep. The camera is now on.</string>
    <string name="tutorial_page_1_txt2">Enter Wi-Fi password in your mobile device settings to connect to Hover Camera.</string>
    <string name="tutorial_page_4_desc1">Face Follow</string>
    <string name="tutorial_page_4_desc2">Body Follow</string>
    <string name="tutorial_page_4_title">Auto-Follow</string>
    <string name="tutorial_page_4_txt1">The best tracking range is 1–4 meters. Tap yellow box to start tracking.</string>
    <string name="tutorial_page_4_txt2">The best tracking range is 4–8 meters. Tap yellow box to start tracking.</string>
</resources>