<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_gravity="center" android:background="@color/transparent" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:layout_gravity="center_horizontal" android:id="@id/imageView" android:layout_width="wrap_content" android:layout_height="260.0dip" android:src="@mipmap/n5_pic_home_firmware_update" />
    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="77.0dip" android:text="@string/check_page_firmware_update_imv_title" style="@style/TxtStyleSize12" />
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="129.0dip">
        <View android:layout_width="0.0dip" android:layout_height="1.0dip" android:layout_weight="1.0" />
        <TextView android:gravity="start" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/check_page_firmware_update_imv_desc_about" android:layout_weight="2.5" style="@style/TxtStyleSize12" />
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="161.0dip">
        <View android:layout_width="0.0dip" android:layout_height="1.0dip" android:layout_weight="1.0" />
        <TextView android:gravity="start" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/check_page_firmware_title" android:layout_weight="3.0" style="@style/TxtStyleSize16" />
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="200.0dip">
        <View android:layout_width="0.0dip" android:layout_height="1.0dip" android:layout_weight="1.0" />
        <TextView android:gravity="start" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/check_page_firmware_update_imv_desc_memory" android:layout_weight="2.5" style="@style/TxtStyleSize12" />
    </LinearLayout>
    <LinearLayout android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="266.0dip" android:paddingStart="30.0dip" android:paddingEnd="30.0dip">
        <TextView android:textColor="@color/color_update_tips" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/check_page_firmware_update_tips" style="@style/TxtStyleSize16" />
        <TextView android:gravity="start" android:id="@id/txt_update_tips" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/check_page_firmware_update_tips_desc" style="@style/TxtStyleSize16" />
    </LinearLayout>
</FrameLayout>
