<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@mipmap/pic_tutorial_background_03" android:layout_width="fill_parent" android:layout_height="fill_parent" android:weightSum="333.0"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="20.0sp" android:textColor="@color/whole_black" android:gravity="center" android:text="@string/setting_owner_mode" android:layout_weight="35.0" style="@style/ItemInOwnerTutorialPageStyle" />
    <TextView android:textSize="17.0sp" android:textColor="@color/transparent_black_30" android:gravity="center" android:text="@string/owner_tutorial_page3_txt_hint" android:maxLines="1" android:layout_weight="44.0" style="@style/ItemInOwnerTutorialPageStyle" />
    <LinearLayout android:orientation="horizontal" android:layout_weight="14.0" style="@style/ItemInOwnerTutorialPageStyle">
        <View android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" />
        <TextView android:textSize="16.0sp" android:textColor="@color/whole_black" android:gravity="center_vertical" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/owner_tutorial_page3_txt_desc1" android:layout_weight="4.0" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_weight="115.0" style="@style/ItemInOwnerTutorialPageStyle">
        <View android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" />
        <TextView android:textSize="16.0sp" android:textColor="@color/whole_black" android:gravity="bottom" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/owner_tutorial_page3_txt_desc2" android:layout_weight="4.0" />
    </LinearLayout>
</LinearLayout>
